# Kinect-Mapper

./: .gitignore  .kinmap.ino.swp  CMakeLists.txt  Doxyfile.in  README  client.py  main.cpp  serial_python.py  server.py
arduino_dev/: display_analogRead.pde  serial_test.ino  tester.py
controls/: CMakeLists.txt  Makefile  README  aux_socket.cpp  aux_socket.h  client.cpp  robot.cpp  robot.h  server.cpp  server.h  server.out
graph/: CMakeLists.txt  graph.cpp  graph.h
interface/: CMakeLists.txt  interface.cpp  interface.h
kinmap/: QEI_HelloWorld.cpp  arduino_DUE_130129.pde  arduino_DUE_130129.pde~  generic_robot.ino  generic_robot.pde~  kinmap.ino  kinmap.pde  kinmap.pde~
kinmap/QEI/: .hg_archival.txt
kinmap/ReadSensors/: ReadSensors.ino
kinmap/RotaryEncoder/: RotaryEncoder.cpp  RotaryEncoder.h
kinmap/SimpleRotaryEncoder/: SimpleRotaryEncoder.cpp  SimpleRotaryEncoder.h
kinmap/arduino_DUE_130129/: arduino_DUE_130129.ino
kinmap/arduino_working/: arduino_working.ino
kinmap/generic_robot/: generic_robot.ino
kinmap/rover_example/: .hg_archival.txt  ADXL345_lib.lib  FATFileSystem.lib  IMU.cpp  IMU.h  IMUfilter.cpp  IMUfilter.h  ITG3200_lib.lib  PID_lib.lib  QEI_lib.lib  RSEDP_AM_MC1_lib.lib  Rover.cpp  Rover.h  main.cpp
navigation/: CMakeLists.txt  README  README~  navigation.cpp  navigation.h
navigation/graph/: graph.cpp  graph.h
navigation/odometry/: odometry.cpp  odometry.h
navigation/planning/: planning.cpp  planning.h
navigation/quadtree/: Makefile  QuadTreeTest  quadtree.h  quadtree.h~
navigation/utilities/: kinect_interface.cpp  kinect_interface.h
odometry/: CMakeLists.txt  odometry.cpp  odometry.h
planning/: CMakeLists.txt  planning.cpp  planning.h
quadtree/: CMakeLists.txt  makefile  quadtree.h  quadtree.hpp  quadtreeTester  quadtree_testbench.cpp
rgbdslam/: CMakeLists.txt  README  log.conf  manifest.xml  rosdep.yaml
rgbdslam/launch/: kinect+rgbdslam.launch
rgbdslam/rgbd_benchmark/: benchmark_evaluation.sh  settings_for_evaluation.launch  summarize_evaluation.sh
rgbdslam/src/: edge.h  gicp-fallback.cpp  glviewer.cpp  glviewer.h  graph_manager.cpp  graph_manager.h  main.cpp  matching_result.h  misc.cpp  misc.h  node.cpp  node.h  openni_listener.cpp  openni_listener.h  parameter_server.cpp  parameter_server.h  qt_gui.cpp  qt_gui.h  qtros.cpp  ros_service_ui.cpp  ros_service_ui.h  sift_gpu_wrapper.cpp  sift_gpu_wrapper.h
test/: CMakeLists.txt  planner_test.cpp  quadtree_testbench.cpp
utilities/: CMakeLists.txt  StateInformation.h  kinect_interface.cpp  kinect_interface.h
